#BILNA-407 #fix desc on mobile

--- a/skin/frontend/base/default/css/pdp.css
+++ b/skin/frontend/base/default/css/pdp.css
@@ -792,6 +792,10 @@ margin: 0 1% ;
 	float: left;
 }
 
+
+.product-tab-mobile-wrapper .tab-container {
+    margin: 0 15px;
+}
 #customer-reviews {
 	margin-bottom: 50px;
 	clear: both;
